# ptc-campus-rewards-backend

./: .env.example  .env.production.example  .gitignore  Dockerfile  README.md  celerybeat-schedule  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_production_indexes_metrics.py  003_redemption_idempotency_balances.py  004_ledger_constraints.py  005_user_pending_status.py  006_staff_profiles.py  007_earning_event_idempotency.py  008_user_password_changed_at.py
app/: __init__.py  main.py
app/api/: deps.py  middleware.py
app/core/: __init__.py  auth_utils.py  config.py  database.py  exceptions.py  logging.py  rate_limit.py  security.py
app/models/: __init__.py  admin_metrics.py  audit_log.py  base.py  earning_event.py  earning_rule.py  enums.py  ledger.py  ledger_account.py  oauth.py  qr_session.py  redemption.py  reward_item.py  staff.py  student.py  user.py  vendor.py  wallet.py
app/repositories/: __init__.py  audit_log.py  earning_event.py  earning_rule.py  ledger.py  ledger_account.py  oauth.py  qr_session.py  redemption.py  reward_item.py  staff.py  student.py  user.py  vendor.py  wallet.py
app/schemas/: admin.py  auth.py  common.py  earning_rule.py  ledger.py  (+6 more)
scripts/: create_admin.py  seed.py  seed_users.py
tests/: conftest.py  test_admin_provisioning.py  test_earning_approval.py  test_health.py  test_ledger.py  test_password_change.py  test_production.py  test_security.py  test_staff_registration.py  test_student_registration.py  test_vendor_registration.py
(+31 files in other folders)
