[project]
name = "ptc-campus-rewards-api"
version = "0.1.0"
description = "PTC Campus Rewards — closed-loop PTC Credits wallet API"
requires-python = ">=3.12"
readme = "README.md"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
